--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   services:
     - docker
+  node:
+    version: 8.2.0
 dependencies:
   pre:
     - sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list'
